@@ -1,3 +1,10 @@
+<b>2.2</b>
+
+<*>Support dual boot patch for non-Treble ROM's</*>
+<*>Add 'Insecure ADBD on Boot' to Patches menu</*>
+<*>Add Encryption forced/optional toggle to Patches menu</*>
+
+
 <b>2.1</b>
 
 <*>Fixed payload installer checking/printing the wrong source slot (should be boot slot instead of current slot)</*>
